--- a/css/Estilos.css
+++ b/css/Estilos.css
@@ -1,19 +1,37 @@
+*{
+  margin: 5;
+  padding: 0;
+  box-sizing: border-box;
+}
 body{
     background-image: url("https://img.ibxk.com.br/2017/08/01/01214602420016.jpg?w=1120&h=420&mode=crop&scale=both");
     background-size: auto 100vh; 
-    font-family:'Raleway', sans-serif;
+    font-family:arial;
+    font-size: 20px;
+
   }
-  
+  /*se a tela tiver pelo menos 400px */
+  @media(min-width: 400px){
+    body{
+      font-size: 50px ;
+    }
+  }
+  header{
+    height:  100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
   div{
 
   }
   .menu{
     background-color: none;
-    height: 50px;
-    width: 500px;
+    position:fixed;
+    top: 0;
   }
-  
+
   .menu ul {
     display: flex;
     justify-content:space-between;
@@ -21,7 +39,10 @@ body{
   .menu li{
     list-style: none;
   }
-  
+  .menu a{
+    display: block;
+    padding: 10px 20px;
+  }
   a{
     text-decoration: none;
     text-align: end;
@@ -47,5 +68,15 @@ body{
     box-shadow:10px 10px black;
     background-image: url(https://i.pinimg.com/originals/d9/82/70/d98270e2ade683be633f16719f5f1bc5.gif);
     background-size: auto 60vh;
+  }
+  h2{
+    font-size: 50px;
+    color: white;
+    text-shadow: 1px 1px 1px black, -1px 1px 1px black, 1px -1px 1px black, -1px -1px 1px black;
+
+  }
+  .img-portfolio{
+    width:  180px;
+    height:  180px;
   }
   
