--- a/css/Estilos.css
+++ b/css/Estilos.css
@@ -3,36 +3,45 @@
   padding: 0;
   box-sizing: border-box;
 }
-body{
-    background-image: url("https://scontent.fgru5-1.fna.fbcdn.net/v/t1.0-9/p960x960/97565234_2493711007556492_5752116873374203904_o.jpg?_nc_cat=102&_nc_sid=730e14&_nc_ohc=jtLYHFCPXgMAX-szlQo&_nc_ht=scontent.fgru5-1.fna&_nc_tp=6&oh=277dc01ca7d08ee48402c7039da82bd2&oe=5EE27DF9");
-    background-size: auto 100vh;
+body{    background-color: #1d1b33;
+  background-size: auto 100vh;
+ 
     height: 100vh;
-    font-size: 10px;
+    font-size: 12px;
     font-family: 'Indie Flower', cursive;
   }
   /*se a tela tiver pelo menos 400px */
-  @media(min-width:100px){
-    a{
-      font-size: 16px;
-    }
-  }
   @media(min-width: 400px){
     body{
       font-size: 14px ;
     }
-    a{
-      font-size: 18px;
-    }
   }
-  @media(min-width: 600px){
+  @media(min-width: 700px){
     body{
       font-size: 18px ;
     }
-    a{
-      font-size: 22px;
+  }
+  .titulo{
+    transform: scale(0.2) translateY(30vh);
+    opacity: 0;  
+    animation:linear 2s animacaoTitulo forwards;
+  }
+
+  @keyframes animacaoTitulo{
+
+  0%{   transform: scale(0.2) translateY(30vh);
+    opacity: 0;  
+
+  }
+    100%{
+      transform: scale(1) translateY(0);
+      opacity: 1;
     }
   }
+
   header{
+    background-image: url("https://ohlaladani.com.br/wp-content/uploads/wallpaper-OHLALADANI_DESKTOP_WALLPAPERS_AVENTURA-2.jpg");
+    background-size: auto 100vh;
     height: 100vh;
     display: flex;
     align-items: center;
@@ -42,14 +51,19 @@ body{
   }
   .menu{
     background-color: rgba(56, 45, 153, 0.219);
-    width: auto;
+    width: 100vw;
     position:fixed;
     border-radius: 100px;
-    top: 0;}
+    top: 0;
+  z-index: 1;}
+
+    .menu a:hover{
+      background-color: whitesmoke;
+    }
 
   .menu ul {
     display: flex;
-    justify-content:space-between;
+    justify-content:center;
   }
   .menu li{
     list-style: none;
@@ -57,12 +71,14 @@ body{
   .menu a{
     display: block;
     padding: 10px 20px;
+    transition:color 2s;
   }
   a{
     text-decoration: none;
     text-align: end;
     text-shadow: 1px 1px 1px black, -1px 1px 1px black, 1px -1px 1px black, -1px -1px 1px black;
     color: white;
+    font-size: 22px;
     font-family: 'Balsamiq Sans', cursive;
   }
   a:hover{
@@ -77,16 +93,6 @@ body{
     font-size: 4em;
     text-align: center;
     text-shadow: 2px 2px 2px black;
-
-
-
-    /*
-    text-align: center;
-    font-size: 100px;
-    text-shadow: 1px 1px 1px black, -1px 1px 1px black, 1px -1px 1px black, -1px -1px 1px black;
-    color: white;*/
-
-
   }
   .site-subtitle,h2{
     color:rgba(245, 245, 245, 0.61) ;
@@ -100,33 +106,45 @@ text-shadow: 1px 1px whitesmoke;
 
   }
   h3{
-    text-align:center;
-    padding: 1em;
-    font-size: 50px;
-    color: white;
-    text-shadow: 1px 1px 1px black, -1px 1px 1px black, 1px -1px 1px black, -1px -1px 1px black;
+    color:rgba(245, 245, 245, 0.61) ;
+    font-style: italic;
+    font-weight: lighter;
+    text-align: center;
+    font-size: 4em;
+    line-height: 1em;
+    margin: 0.5em;
+   font-family: 'Open Sans Condensed', sans-serif;
+    text-shadow: 1px 1px whitesmoke;
 
   }
-  .Portfólio{
-    font-size: 1.5em;
+  figcaption{
+    font-size: 2em;
     color: whitesmoke;
-    padding: 2em;
+    font-family: 'Acme', sans-serif;
+  }
+  .contato,
+  .Sobre,
+  .Portfólio{
+    padding: 1em;
     height: 100vh;
   }
-
-  .Portfólio h3{
-    font-family: Arial;
-
-  }
   .img-portfolio{
-    width:  200px;
-    height:  200px;
+    width:  120px;
+    height:  120px;
     object-fit: cover;
     border-radius: 100px;
+    transform: scale(1);
+    transition: transform 500ms;
   }
   .img-portfolio1{
     width:  200px;
     height:  200px;
+    transform: scale(1);
+    transition: transform 500ms;
+  }
+  .img-portfolio:hover,
+  .img-portfolio1:hover{
+    transform: scale(1.2);
   }
 
   .Portfólio .grid{
@@ -135,11 +153,43 @@ text-shadow: 1px 1px whitesmoke;
     height: 100vh;
   
   }
+    .Portfólio .grid{
+      grid-template-columns: 350px 350px ;
+    }
+
+
+    @media (min-width: 1px) {
+
+      .img-portfolio{
+        width:  120px;
+        height:  120px;
+        object-fit: cover;
+        border-radius: 100px;
+      }
+      .img-portfolio1{
+        width:  120px;
+        height:  120px;
+      }
+
+      .Portfólio .grid{
+        justify-content: center;
+        align-items: center;
+        height: calc(90vh - 2em - 48px - 1em);
+        grid-template-columns: 150px 150px ;
+      } }
+
+      @media (min-width: 450px) {
+
+        .Portfólio .grid{
+          grid-template-columns: 200px 200px ;
+        }
+      }
   @media (min-width: 735px) {
 
     .Portfólio .grid{
       grid-template-columns: 350px 350px ;
     }
+  }
   @media (min-width: 1120px) {
 
     .Portfólio .grid{
@@ -147,21 +197,98 @@ text-shadow: 1px 1px whitesmoke;
     }
   }
   @media (min-width: 1440px) {
+    .img-portfolio{
+      width:  200px;
+      height:  200px;
+      object-fit: cover;
+      border-radius: 100px;
+    }
+    .img-portfolio1{
+      width:  200px;
+      height:  200px;
+    }
     .Portfólio .grid{
     grid-template-columns: 350px 350px 350px 350px;
     justify-content: center;
     align-items: center;
-    height: calc(85vh - 2em - 48px - 1em);
+    height: calc(90vh - 2em - 48px - 2em);
     }
   }
- 
+
+  h4{    color:rgba(245, 245, 245, 0.61) ;
+    font-style: italic;
+    font-weight: lighter;
+    text-align: center;
+    font-size: 2em;
+    line-height: 1em;
+    padding: 0.2em;
+    font-family: 'Open Sans Condensed', sans-serif;
+    text-shadow: 1px 1px whitesmoke;
+
+  }
+  .contato .icons{
+    text-align: center;
+  }
+  .contato a{
+    color: white;
+    font-size: 4em;
+    justify-content: space-between;
+    text-shadow: 0 0 0;
+    transition: text-shadow 1s;
+  }
+  .contato a:active,
+  .contato a:hover{
+    text-decoration: none;
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0.596);
+  }
+  .Portfólio
+  {
+    background-image: url("https://scontent.fgru5-1.fna.fbcdn.net/v/t1.0-9/97993532_2494595607468032_4157897915873886208_o.jpg?_nc_cat=101&_nc_sid=730e14&_nc_ohc=6EbyACTnHJYAX_LaMOD&_nc_ht=scontent.fgru5-1.fna&oh=b8c648bb840297d27ffb0838904bbd90&oe=5EE4EC95");
+    padding: 2em;
+    height: 100vh;
+
+  }
+  .Sobre{
+    padding: 2em;
+    height: 100vh;
+  }
+  .contato{
+    background-color: rgba(0, 0, 0, 0.473);
+    padding: 2em;
+    height: auto;
+    border-radius: 40px;
+  }
+  h5{color:rgba(245, 245, 245, 0.61);
+    font-style: italic;
+    font-weight: lighter;
+    text-align: center;
+    font-size: 4em;
+    line-height: 1em;
+    padding: 0.2em;
+    font-family: 'Open Sans Condensed', sans-serif;
+    text-shadow: 1px 1px whitesmoke;
+  }
+  @media(min-width: 1400px)
+  {
+    .container{
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 1400px;
+    }
+  }
+   .Sobre img{
+    width:  200px;
+    height:  200px;
+  }
+  .Sobre .avatar{
+    float: right;
+  }
+  .Sobre p{
+    color:whitesmoke;
+    text-indent: 2em;
+    margin-bottom: 1em;
+  }
   .Portfólio figure{
     text-align: center;
   }
-  /*
-  .figcaption{
-    font-size: 50px;
-    color: white;
-    text-shadow: 1px 1px 1px black, -1px 1px 1px black, 1px -1px 1px black, -1px -1px 1px black;
-
-  }*/}
+  
